--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Christopher Hsu
 # description: the profile of an engineer, researcher and software developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/circle_bw_crop.jpg
+avatar: images/IMG_0491.jpg
 
 #
 # Flags below are optional
